[gd_scene load_steps=7 format=3 uid="uid://c7oodgwgojd61"]

[ext_resource type="Script" path="res://Scripts/interactible_object.gd" id="1_gwkw4"]
[ext_resource type="Shader" path="res://Resources/Shaders/progress_circle.gdshader" id="2_815xo"]
[ext_resource type="Texture2D" uid="uid://dsll52spoxobb" path="res://Assets/Textures/UI/circle.png" id="3_054ey"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_gp3x7"]
shader = ExtResource("2_815xo")
shader_parameter/color = Color(1, 1, 1, 1)
shader_parameter/upper_bound = 0.32
shader_parameter/lower_bound = null
shader_parameter/donut_inner_radius = null

[sub_resource type="LabelSettings" id="LabelSettings_rtcij"]
font_size = 48

[sub_resource type="LabelSettings" id="LabelSettings_1dxoa"]
font_size = 24
font_color = Color(0.898039, 0.898039, 0.898039, 1)
outline_size = 7
outline_color = Color(0.0901961, 0.0901961, 0.0901961, 1)

[node name="Interactible" type="Node3D"]
script = ExtResource("1_gwkw4")

[node name="progress_indicator" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
scale = Vector2(0.4, 0.4)

[node name="progress_circle" type="Sprite2D" parent="progress_indicator"]
material = SubResource("ShaderMaterial_gp3x7")
position = Vector2(-65, -127.5)
texture = ExtResource("3_054ey")

[node name="inner_circle" type="Sprite2D" parent="progress_indicator/progress_circle"]
scale = Vector2(0.8, 0.8)
texture = ExtResource("3_054ey")

[node name="input_hint_label" type="Label" parent="progress_indicator/progress_circle/inner_circle"]
offset_left = -18.75
offset_top = -32.5
offset_right = 21.25
offset_bottom = 37.5
text = "F"
label_settings = SubResource("LabelSettings_rtcij")
horizontal_alignment = 1
vertical_alignment = 1

[node name="contextual_action_label" type="Label" parent="progress_indicator/progress_circle"]
offset_left = 59.0
offset_top = -28.0
offset_right = 209.0
offset_bottom = 20.0
text = "INTERACT"
label_settings = SubResource("LabelSettings_1dxoa")
vertical_alignment = 1
